--- a/css/index.css
+++ b/css/index.css
@@ -21,6 +21,7 @@ body{
 main{
     height: 100%;
     width: 100%;
+    max-width: 600px;
     display: grid;
     grid-template-columns: repeat(20, 5%);
     grid-template-rows: 50px repeat(2, 75px) repeat(15, 50px) repeat(2, 75px);
@@ -83,15 +84,17 @@ blockquote{
     grid-column: 2 / span 15;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (min-width: 768px) {
+    main{
+        max-width: 700px;
+    }
     .main-img{
         grid-column: 4 / span 16;
         grid-row: 3 / span 10;
     }
   
     .second-img{
-       
-        grid-column: 2 / span 6;
+        grid-column: 2 / span 7;
         grid-row: 10 / span 4;
         border-right: 10px solid white;
         
@@ -103,15 +106,35 @@ blockquote{
     }
 
     .text-block-1{
-        grid-column: 5 / span 14;
-        grid-row: 14 / span 2;
+        grid-column: 4 / span 15;
+        grid-row: 15 / span 2;
     }
 
     h1{
         grid-column: 2 / span 14;
+        grid-row: 14 / span 2;
+    }
+
+    blockquote{
+        margin-top: 60px;
+        grid-row: 19 / span 5;
+        grid-column: 1 / span 12;
+        border-top: none;
+        border-bottom: none;
+        border-left: 7px solid rgba(165, 166, 209, 0.705);
+        padding-left: 20px;
+    }
+
+    .text-block-2{
+        grid-column: 4 / span 15;
     }
   }
   
   @media screen and (min-width: 1200px) {
+      main{
+          max-width: 850px;
+      }
+
       
+    
  }
