--- a/css/index.css
+++ b/css/index.css
@@ -1,140 +1,168 @@
-html{
-    font-size: 62.5%;
+html {
+  font-size: 62.5%;
 }
 
-*{
-    box-sizing: border-box;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1.5rem;
-    color: rgb(61, 61, 61);
+* {
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1.5rem;
+  color: rgb(61, 61, 61);
 }
 
-
-
-body{
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-main{
-    height: 100%;
-    width: 100%;
-    max-width: 600px;
-    display: grid;
-    grid-template-columns: repeat(20, 5%);
-    grid-template-rows: 50px repeat(2, 75px) repeat(15, 50px) repeat(2, 75px);
+main {
+  height: 100%;
+
+  max-width: 600px;
+  display: grid;
+  grid-template-columns: repeat(20, 5%);
+  grid-template-rows: 20px repeat(2, 75px) repeat(15, 50px) repeat(2, 75px);
 }
 
-.main-img{
-    background-image: url(/images/jeremy-bishop-_CFv3bntQlQ-unsplash.jpg);
-    background-size: cover;
-    background-position: center;
-    grid-column: 2 / span 17;
-    grid-row: 3 / span 10;
+.main-img {
+  background-image: url(/images/jeremy-bishop-_CFv3bntQlQ-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+  grid-column: 2 / span 17;
+  grid-row: 3 / span 8;
 }
 
-.second-img{
-    background-image: url(/images/jeremy-bishop-qH7cYCMF10M-unsplash.jpg);
-    background-size: cover;
-    background-position: center;
-    grid-column: 4 / span 15;
-    grid-row: 12 / span 2;
-    border-top: 10px solid white;
-    border-left: 10px solid white;
+.second-img {
+  background-image: url(/images/jeremy-bishop-qH7cYCMF10M-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+  grid-column: 4 / span 15;
+  grid-row: 10 / span 2;
+  border-top: 10px solid white;
+  border-left: 10px solid white;
 }
 
-h3{
-    grid-column: 3 / span 15;
-    grid-row: 2 / span 2;
-    background-color: white;
-    z-index: 2;
-    padding: 20px;
-    padding-right: 50px;
-    font-size: 2rem;
-    
+h3 {
+  grid-column: 3 / span 15;
+  grid-row: 2 / span 2;
+  background-color: white;
+  z-index: 2;
+  padding: 20px;
+  padding-right: 50px;
+  font-size: 2rem;
 }
 
-h1{
-    grid-column: 2 / span 15;
-    grid-row: 14 / span 1;
+h1 {
+  grid-column: 2 / span 15;
+  grid-row: 12 / span 1;
 }
 
-.text-block-1{
-    grid-column: 2 / span 15;
-    grid-row: 15 / span 5;
-    
+.text-block-1 {
+  grid-column: 2 / span 15;
+  grid-row: 13 / span 5;
 }
 
-blockquote{
-    grid-column: 2 / span 17;
-    grid-row: 21 / span 2;
-    font-size: 1.8rem;
-    line-height: 1.5;
-    font-weight: lighter;
-    border-top: 7px solid rgba(165, 166, 209, 0.705);
-    border-bottom: 7px solid rgba(165, 166, 209, 0.705);
-    padding: 10px;
-    
+blockquote {
+  grid-column: 2 / span 17;
+  grid-row: 20 / span 2;
+  font-size: 1.8rem;
+  line-height: 1.5;
+  font-weight: lighter;
+  border-top: 7px solid rgba(165, 166, 209, 0.705);
+  border-bottom: 7px solid rgba(165, 166, 209, 0.705);
+  padding: 10px;
 }
 
-.text-block-2{
-    grid-row: 24 / span 2;
-    grid-column: 2 / span 15;
+.text-block-2 {
+  grid-row: 24 / span 2;
+  grid-column: 2 / span 15;
 }
 
 @media screen and (min-width: 768px) {
-    main{
-        max-width: 700px;
-    }
-    .main-img{
-        grid-column: 4 / span 16;
-        grid-row: 3 / span 10;
-    }
-  
-    .second-img{
-        grid-column: 2 / span 7;
-        grid-row: 10 / span 4;
-        border-right: 10px solid white;
-        
-    }
-
-    h3{
-        grid-column: 2 / span 17;
-        grid-row: 2 / span 2;
-    }
-
-    .text-block-1{
-        grid-column: 4 / span 15;
-        grid-row: 15 / span 2;
-    }
-
-    h1{
-        grid-column: 2 / span 14;
-        grid-row: 14 / span 2;
-    }
-
-    blockquote{
-        margin-top: 60px;
-        grid-row: 19 / span 5;
-        grid-column: 1 / span 12;
-        border-top: none;
-        border-bottom: none;
-        border-left: 7px solid rgba(165, 166, 209, 0.705);
-        padding-left: 20px;
-    }
-
-    .text-block-2{
-        grid-column: 4 / span 15;
-    }
+  main {
+    max-width: 600px;
   }
-  
-  @media screen and (min-width: 1200px) {
-      main{
-          max-width: 850px;
-      }
+  .main-img {
+    grid-column: 4 / span 16;
+    grid-row: 3 / span 8;
+  }
 
-      
-    
- }
+  .second-img {
+    grid-column: 2 / span 7;
+    grid-row: 8 / span 4;
+    border-right: 10px solid white;
+  }
+
+  h3 {
+    grid-column: 2 / span 17;
+    grid-row: 2 / span 2;
+  }
+
+  .text-block-1 {
+    grid-column: 4 / span 15;
+    grid-row: 13 / span 2;
+  }
+
+  h1 {
+    grid-column: 2 / span 14;
+    grid-row: 12 / span 2;
+  }
+
+  blockquote {
+    margin-top: 60px;
+    grid-row: 17 / span 5;
+    grid-column: 1 / span 12;
+    border-top: none;
+    border-bottom: none;
+    border-left: 7px solid rgba(165, 166, 209, 0.705);
+    padding-left: 20px;
+  }
+
+  .text-block-2 {
+    grid-column: 4 / span 15;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  main {
+    max-width: 600px;
+    grid-template-rows: 20px repeat(2, 5px) repeat(30, 50px);
+  }
+  .main-img {
+    grid-row: 3 / span 9;
+  }
+
+  h3 {
+    grid-row: 4 / span 3;
+    grid-column: 2 / span 5;
+    font-size: 1.2rem;
+    padding-bottom: 10px;
+  }
+
+  .second-img {
+    grid-row: 11 / span 2;
+    height: 150px;
+  }
+
+  h1 {
+    grid-row: 13;
+    padding-top: 60px;
+  }
+
+  .text-block-1 {
+    grid-row: 15;
+    padding-top: 30px;
+  }
+
+  blockquote {
+    grid-row: 20 / span 5;
+    grid-column: 1 / 16;
+    height: 145px;
+  }
+  .text-block-2 {
+    grid-row: 24;
+    padding-top: 25px;
+  }
+}
